Ability to anonymize statistics (used when deleting account).
